k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-web
  labels:
    app: expense-tracker-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker-web
  template:
    metadata:
      labels:
        app: expense-tracker-web
    spec:
      containers:
      - name: web
        image: asia-south1-docker.pkg.dev/project-3abb875e-b867-4aaf-843/expense-repo/expense-tracker-web:latest
        ports:
        - containerPort: 8501
        resources:
          requests:
            #memory: "5Mi"
            memory: "128Mi" #Scenario 2 : CPU/Lateneyc
            #cpu: "10m"
            cpu: "5m"
          limits:
            #memory: "10Mi" # <--- CrashLoopBackoff Scenario -->  INJECTED FAULT 1: Ultra-low memory to force OOMKilled
             memory: "256Mi" #Fix For OOMKilled
             cpu: "10m" #<--- INJECTED FAULT 2: Ultra-low CPU limit forces severe CPU throttling/latency
        livenessProbe:
          httpGet:
            #path: /healthz-broken # <--- If an application shows as Running in Kubernetes but users get no response
             path: /  ### Fix for  application shows as Running in Kubernetes but users get no response
            port: 8501
          initialDelaySeconds: 5
          periodSeconds: 5
