k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-service
spec:
  type: LoadBalancer
  selector:
    app: expense-tracker  ########## Scenario 4: Application Active but Users Get Connection Refused / 502
    #app: expense-tracker-web   # Fixed to match pod label 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
